[build-system]
requires = [
    "scikit_build_core[pyproject,rich] >= 0.2.0",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[project]
name = "mammoth_cpp"
version = "0.1.0"
description = "c++ code supporting mostly columnar based physics analyses"
requires-python = ">=3.8"
authors = [{name ="Raymond Ehlers", email = "raymond.ehlers@gmail.com"}]
license = {text = "BSD-3-Clause"}
dependencies = []

[tool.scikit-build]
sdist.include = ["src/mammoth_cpp/fastjet"]
build-dir = "_skbuild"
