[build-system]
requires = [
    "scikit_build_core[pyproject] >= 0.9",
    "pybind11 >= 2.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "mammoth_cpp"
version = "0.3.0"
description = "c++ code supporting mostly columnar based physics analyses"
requires-python = ">=3.8"
authors = [{name ="Raymond Ehlers", email = "raymond.ehlers@gmail.com"}]
license = {text = "BSD-3-Clause"}
dependencies = []

[tool.scikit-build]
minimum-version = "build-system.requires"
sdist.include = ["src/mammoth_cpp/fastjet"]
sdist.exclude = [
    "build",
    "external/fastjet",
    "external/install",
]
sdist.reproducible = true
build-dir = "build/{wheel_tag}"

[[tool.scikit-build.overrides]]
if.platform-system = "darwin"
cmake.version = ">=3.29"
